--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@ clevertap.notificationCallback = function(msg){
         "key2":"value2"
     }
 }
+	clevertap.notifications.push({
+  "titleText":'Would you like to receive Push Notifications?',
+  "bodyText":'We promise to only send you relevant content and give you updates on your transactions',
+  "okButtonText":'Sign me up!',
+  "rejectButtonText":'No thanks',
+  "okButtonColor":'#f28046'});
+
 </script>
 
 
