--- a/index.html
+++ b/index.html
@@ -1,32 +1,43 @@
+importScripts('https://s3-eu-west-1.amazonaws.com/static.wizrocket.com/js/sw_webpush.js');
 <!DOCTYPE html> 
 <html> 
 <head>
 <script type="text/javascript">
      var clevertap = {event:[], profile:[], account:[], onUserLogin:[], notifications:[], privacy:[]};
  // replace with the CLEVERTAP_ACCOUNT_ID with the actual ACCOUNT ID value from your Dashboard -> Settings page
-clevertap.account.push({"id": "W67-774-7Z5Z"});
+clevertap.account.push({"id": "848-6W8-9R6Z"});
 clevertap.privacy.push({optOut: false}); //set the flag to true, if the user of the device opts out of sharing their data
 clevertap.privacy.push({useIP: false}); //set the flag to true, if the user agrees to share their IP data
  (function () {
-		 var wzrk = document.createElement('script');
-		 wzrk.type = 'text/javascript';
-		 wzrk.async = true;
-		 wzrk.src = ('https:' == document.location.protocol ? 'https://d2r1yp2w7bby2u.cloudfront.net' : 'http://static.clevertap.com') + '/js/a.js';
-		 var s = document.getElementsByTagName('script')[0];
-		 s.parentNode.insertBefore(wzrk, s);
+         var wzrk = document.createElement('script');
+         wzrk.type = 'text/javascript';
+         wzrk.async = true;
+         wzrk.src = ('https:' == document.location.protocol ? 'https://d2r1yp2w7bby2u.cloudfront.net' : 'http://static.clevertap.com') + '/js/a.js';
+         var s = document.getElementsByTagName('script')[0];
+         s.parentNode.insertBefore(wzrk, s);
   })();
   
   // with the exception of one of Identity, Email, or FBID
 // each of the following fields is optional
 
-clevertap.onUserLogin.push({
- "Site": {
+  clevertap.onUserLogin.push({
+   "Site": {
    "Name": "Tej",            // String
-   "Identity": 61026032,              // String or number
+   "Identity": 61test01,              // String or number 61test01
    "Email": "tejaswini@clevertap.com",         // Email address of the user
+   "Phone": "8879096119",
    "Gender": "F",
    "MSG-email": true,                // Enable email notifications
-   "MSG-push": true					// Enable push notifications
+   "MSG-push": true                // Enable push notifications
+   "MSG-sms": true,                   // Enable sms notifications
+   "MSG-whatsapp": true,              // Enable WhatsApp notifications
+
+   clevertap.event.push("Product Viewed", {
+  "Product name":"Casio Chronograph Watch",
+  "Category":"Mens Accessories",
+  "Price":59.99,
+});
+ 
  }
 
 })
@@ -58,12 +69,16 @@ clevertap.notificationCallback = function(msg){
         "key2":"value2"
     }
 }
-	clevertap.notifications.push({
-  "titleText":'Would you like to receive Push Notifications?',
-  "bodyText":'We promise to only send you relevant content and give you updates on your transactions',
-  "okButtonText":'Sign me up!',
-  "rejectButtonText":'No thanks',
-  "okButtonColor":'#f28046'});
+
+clevertap.notifications.push ({
+ "“titleText”:‘Would you like to receive Push Notifications?’,
+    "bodyText”:‘We promise to only send you relevant content and give you updates on your transactions’,
+    "okButtonText”:‘Sign me up!’,
+    "rejectButtonText”:‘No thanks’,
+    "okButtonColor”:‘#F28046’,
+    "askAgainTimeInSeconds”:5,
+    "serviceWorkerPath”: “/foo/my_sw.js”  // path to your custom service worker file
+  });
 
 </script>
 
@@ -111,23 +126,43 @@ button {
         padding: 25px; 
         background-color: lightblue;
     } 
+    
+#snackbar.show {
+  visibility: visible;
+  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  animation: fadein 0.5s, fadeout 0.5s 2.5s;
 </style> 
+  <link rel="manifest" href="/manifest.json">
+
 </head>  
 <body>  
     <center> <h1> Login Form </h1> </center>
     <form>
         <div class="container"> 
             <label>Username : </label> 
-            <input type="text" placeholder="Enter Username" name="username" required>
+            <input type="text" placeholder="Enter Identity" name="identity" required>
             <label>Password : </label> 
             <input type="password" placeholder="Enter Password" name="password" required>
-            <button type="submit">Login</button>
+            <label>Mobile No. : </label> 
+            <input type="mobileNo" placeholder="Enter Mobile No" name="mobileNo" required>
+            <label>E-mail id : </label> 
+            <input type="email" placeholder="Enter E-mail id" name="email" required>
+            <button onclick="myFunction()">Login</button>
+
+            <div id="snackbar">Login Sucessfull...</div>
+
+            <script>
+            function myFunction() {
+              var x = document.getElementById("snackbar");
+              x.className = "show";
+              setTimeout(function(){ x.className = x.className.replace("show", ""); }, 3000);
+            } 
             <button type="submit">Test</button>  
             <input type="checkbox" checked="checked"> Remember me 
             <button type="button" class="cancelbtn"> Cancel</button> 
             Forgot <a href="#"> password? </a> 
         </div> 
-		
+        
     </form>   
 </body>   
 </html>
