--- a/index.html
+++ b/index.html
@@ -70,15 +70,12 @@ clevertap.notificationCallback = function(msg){
     }
 }
 
-clevertap.notifications.push ({
- "“titleText”:‘Would you like to receive Push Notifications?’,
-    "bodyText”:‘We promise to only send you relevant content and give you updates on your transactions’,
-    "okButtonText”:‘Sign me up!’,
-    "rejectButtonText”:‘No thanks’,
-    "okButtonColor”:‘#F28046’,
-    "askAgainTimeInSeconds”:5,
-    "serviceWorkerPath”: “/foo/my_sw.js”  // path to your custom service worker file
-  });
+clevertap.notifications.push({
+  "titleText":'Would you like to receive Push Notifications?',
+  "bodyText":'We promise to only send you relevant content and give you updates on your transactions',
+  "okButtonText":'Sign me up!',
+  "rejectButtonText":'No thanks',
+  "okButtonColor":'#f28046'});
 
 </script>
 
